<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.esc.doglend.ui.fragments.profiles.AddDogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_dog_intro"
        android:text="@string/add_dog_intro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/reg_scroll"
        app:layout_constraintTop_toBottomOf="@id/add_dog_intro"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_wel_two"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vertical_line"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_dog_edit"
                android:hint="@string/dog_name"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/name_dog_input"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_two"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/name_dog_edit"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/breed_auto"
                android:hint="@string/dog_breed"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintTop_toBottomOf="@id/space_two">
            </AutoCompleteTextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dog_sex"
                android:textSize="17sp"
                android:id="@+id/sex_text"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sex"
                app:layout_constraintTop_toTopOf="@id/sex"
                app:layout_constraintBottom_toBottomOf="@id/sex"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/sex"
                android:hint="@string/dog_sex"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toTopOf="@id/age"
                app:layout_constraintBottom_toBottomOf="@id/age"
                app:layout_constraintEnd_toStartOf="@id/vertical_line"
                app:layout_constraintStart_toEndOf="@id/sex_text"
                app:layout_constraintWidth_percent="0.33"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dog_age"
                android:textSize="17sp"
                android:id="@+id/age_text"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/vertical_line"
                app:layout_constraintEnd_toStartOf="@id/age"
                app:layout_constraintTop_toTopOf="@id/age"
                app:layout_constraintBottom_toBottomOf="@id/age"/>
            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:id="@+id/age"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/breed_auto"
                app:layout_constraintStart_toEndOf="@id/age_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dog_size"
                android:textSize="17sp"
                android:id="@+id/size_text"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/size"
                app:layout_constraintTop_toTopOf="@id/size"
                app:layout_constraintBottom_toBottomOf="@id/size"/>
            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:id="@+id/size"
                app:layout_constraintTop_toTopOf="@id/sociability"
                app:layout_constraintBottom_toBottomOf="@id/sociability"
                app:layout_constraintStart_toEndOf="@id/size_text"
                app:layout_constraintEnd_toStartOf="@id/vertical_line"
                app:layout_constraintWidth_percent="0.2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dog_sociability"
                android:textSize="17sp"
                android:id="@+id/sociability_text"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/vertical_line"
                app:layout_constraintEnd_toStartOf="@id/sociability"
                app:layout_constraintTop_toTopOf="@id/sociability"
                app:layout_constraintBottom_toBottomOf="@id/sociability"/>
            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:id="@+id/sociability"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/age"
                app:layout_constraintStart_toEndOf="@id/sociability_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dog_stamina"
                android:textSize="17sp"
                android:id="@+id/stamina_text"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/stamina"
                app:layout_constraintTop_toTopOf="@id/stamina"
                app:layout_constraintBottom_toBottomOf="@id/stamina"/>
            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:id="@+id/stamina"
                app:layout_constraintTop_toBottomOf="@id/sociability"
                app:layout_constraintStart_toEndOf="@id/vertical_line"
                app:layout_constraintEnd_toStartOf="@id/stamina_units"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/stamina_units"
                android:layout_marginEnd="10dp"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toTopOf="@id/stamina"
                app:layout_constraintBottom_toBottomOf="@id/stamina"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/stamina"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dog_energy"
                android:textSize="17sp"
                android:id="@+id/energy_text"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/energy"
                app:layout_constraintTop_toTopOf="@id/energy"
                app:layout_constraintBottom_toBottomOf="@id/energy"/>
            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:id="@+id/energy"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/stamina"
                app:layout_constraintStart_toEndOf="@id/energy_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.2"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/compass_darker"
        android:visibility="gone"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>