<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.esc.doglend.ui.fragments.login.RegisterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_instructions"
        android:text="@string/reg_instructions"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_scroll"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/reg_instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_wel_two"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_name"
                android:hint="@string/name_asterisk"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/reg_name_input"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_two"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_name"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_surname"
                android:hint="@string/surname_asterisk"
                app:errorEnabled="true"
                app:boxBackgroundMode="none"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/space_two">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusable="true"
                    android:id="@+id/reg_surname_input"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_three"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_surname"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_phone"
                android:hint="@string/phone_asterisk"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/space_three">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/reg_phone_input"
                    android:focusable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_four"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_phone"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/reg_map"
        app:layout_constraintTop_toBottomOf="@id/reg_scroll"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <AutoCompleteTextView
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:drawableRight="@drawable/search_black_24"
        android:layout_marginTop="10dp"
        android:id="@+id/map_search"
        android:background="@drawable/rounded_layout"
        app:layout_constraintTop_toTopOf="@id/reg_map"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/posErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please enter a valid location"
        android:textColor="#FF0000"
        android:textSize="17.5sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_search" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/compass_darker"
        android:visibility="gone"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>